# rust_os

./: Cargo.toml  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
kernel/src/trap/: mod.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocations.rs  stack_overflow.rs
