[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[dependencies]
# # used for UEFI booting in QEMU
# ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }


[workspace]
members = ["kernel"]

[[test]]
name = "stack_overflow"
harness = false
